move add tags force existing option and update label. see #391

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -59,15 +59,6 @@
               </label>
             </td>
           </tr>
-          <tr class="add_tags_tr add_tags_auto" id="add_tags_auto_force_existing_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_auto_force_existing__</span></td>
-            <td>
-              <label>
-                <input type="checkbox" id="add_tags_auto_force_existing" name="add_tags_auto_force_existing" class="option-input" />
-                __MSG_prefs_OptionText_add_tags_auto_force_existing_Info__
-              </label>
-            </td>
-          </tr>
           <tr class="add_tags_tr add_tags_auto" id="add_tags_auto_only_inbox_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_auto_only_inbox__</span></td>
             <td>
@@ -83,6 +74,15 @@
               <label>
                 <input type="checkbox" id="add_tags_context_menu" name="add_tags_context_menu" class="option-input" />
                 __MSG_prefs_OptionText_add_tags_context_menu_Info__
+              </label>
+            </td>
+          </tr>
+          <tr class="add_tags_tr">
+            <td><span>__MSG_prefs_OptionText_add_tags_auto_force_existing__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_auto_force_existing" name="add_tags_auto_force_existing" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_auto_force_existing_Info__
               </label>
             </td>
           </tr>
