--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.5.0 - ??/??/2025</h2>
+      <h2>Version 3.5.0 - 30/05/2025</h2>
       <ul>
         <li>Added Anthropic API support [<a href="https://github.com/micz/ThunderAI/issues/349">#349</a>].</li>
         <li>Added the <i>{%selected_html%}</i> placeholder to retrieve the HTML portion of the selected text [<a href="https://github.com/micz/ThunderAI/issues/368">#368</a>].</li>
@@ -19,8 +19,7 @@
         <li>Fix: In the Spamfilter page the unsaved changes warning is now correctly shown.</li>
         <li>Fix: The default keyboard shortcut is no longer enforced at every Thunderbird startup [<a href="https://github.com/micz/ThunderAI/issues/384">#384</a>].</li>
         <li>Fix: Incoming email processing now works correctly when auto-tagging is enabled and the full tagging feature is subsequently disabled.</li>
-        <li>Fix: The reply type is correctly saved. [<a href="https://github.com/micz/ThunderAI/issues/387">#387</a>].</li>
-        <li>...</li>
+        <li>Fix: The reply type is correctly saved in the options. [<a href="https://github.com/micz/ThunderAI/issues/387">#387</a>].</li>
       </ul>
       <h2>Version 3.4.1 - 12/05/2025</h2>
       <ul>
