--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -220,6 +220,19 @@
       <tr class="conntype_chatgpt_api">
         <td>
           <label>
+            <span class="opt_title">__MSG_ChatGPT_StoreFlag__</span>
+          </label>
+        </td>
+        <td>
+          <label>
+            <input type="checkbox" id="chatgpt_api_store" name="chatgpt_api_store" class="option-input" />
+            &nbsp;<span>__MSG_ChatGPT_StoreFlag_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_chatgpt_api">
+        <td>
+          <label>
             <span class="opt_title">__MSG_ChatGPT_Developer_Messages__</span>
           </label>
         </td>
