add 'Enable thinking' option for Ollama in settings and UI. see #398

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -318,6 +318,17 @@
       </tr>
       <tr class="conntype_ollama_api">
         <td><label>
+          <span class="opt_title">__MSG_prefs_ollama_think__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="ollama_think" name="ollama_think" class="option-input"/>
+            __MSG_prefs_ollama_think_Info__
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_ollama_api">
+        <td><label>
           <span class="opt_title">__MSG_prefs_ollama_num_ctx__ <i>[num_ctx]</i></span>
         </label></td>
         <td>
