--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 3.5.3 - 10/06/2025</h2>
+      <ul>
+        <li><i>[ChatGPT Web]</i> Fix: Correctly detecting when the response is completed.</li>
+      </ul>
       <h2>Version 3.5.2 - 05/06/2025</h2>
       <ul>
         <li><i>[ChatGPT Web]</i> Fix: Correctly hiding the model warning message when forcing to send the prompt [<a href="https://github.com/micz/ThunderAI/issues/410">#410</a>].</li>
