--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,8 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 3.5.4 - 13/06/2025</h2>
       <ul>
-        <li><i>[ChatGPT Web]</i> Fix: Changed again hot to detect when the response is completed.</li>
+        <li><i>[ChatGPT Web]</i> Fix: Changed again how to detect when the response is completed.</li>
+        <li><i>[ChatGPT Web]</i> Fix: Auto scroll to bottom works again.</li>
       </ul>
       <h2>Version 3.5.3 - 10/06/2025</h2>
       <ul>
