added reply type info text. see #372

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -65,6 +65,7 @@
               <option value="reply_all">__MSG_prefs_OptionText_reply_all__</option>
               <option value="reply_sender">__MSG_prefs_OptionText_reply_sender__</option>
             </select>
+            <br>__MSG_prefs_OptionText_reply_type_info__
           </label>
         </td>
       </tr>
