added an option to exclude the tag only with an exact match. see #395

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -23,6 +23,15 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
+            <td><span>__MSG_prefs_OptionText_add_tags_exclusions_exact_match__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_exclusions_exact_match" name="add_tags_exclusions_exact_match" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_exclusions_exact_match_Info__
+              </label>
+            </td>
+          </tr>
+          <tr class="add_tags_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_hide_exclusions__</span></td>
             <td>
               <label>
