list.js moved to _lib folder

--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -122,7 +122,7 @@
           </table>
     </div>
     <div class="storage_space">__MSG_StorageSpace__: <span id="storage_space"></span></div>
-    <script src="list.js"></script>
+    <script src="../_lib/list.js"></script>
     <script src="mzta-custom-prompts.js" type="module"></script>
     <script src="../../js/mzta-i18n.js"></script>
 </body>
