Add button and functionality to manage data placeholders in options. see #156

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -543,6 +543,7 @@
     <div id="btn_custom_prompts">
         <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
         <br>__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a>
+        <br><button id="btnManageCustomDataPH">__MSG_prefs_OptionText_btnManageCustomDataPH__</button>
     </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
