Refactor localization keys for prompts to use a consistent naming convention and update related HTML references

--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -19,9 +19,9 @@
         <button id="btnImport">__MSG_customPrompts_Import__</button>
     </div>
     <div id="command_palette">
-      <button id="btnSaveAll" disabled>__MSG_customPrompts_btnSaveAll__</button>
+      <button id="btnSaveAll" disabled>__MSG_btnSaveAll_string__</button>
       <span id="msgDisplay"></span>
-      <button id="btnNew">__MSG_customPrompts_btnNew__</button>
+      <button id="btnNew">__MSG_btnNew_string__</button>
     </div>
     <div id="formNew">
       <table class="width_all">
