--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 3.6.0 - ??/??/2025</h2>
       <ul>
+        <li>Now it's possibile to define custom data placeholders to be used in custom prompts [<a href="https://github.com/micz/ThunderAI/issues/156">#156</a>].</li>
         <li>When replying, it's now possibile to choose a different reply type (between "all" or "sender only") directly in the AI chat window [<a href="https://github.com/micz/ThunderAI/issues/372">#372</a>].</li>
         <li><i>[All APIs]</i> Added an option to choose to exclude a tag only with an exact match in the excluded words list [<a href="https://github.com/micz/ThunderAI/issues/395">#395</a>].</li>
         <li><i>[OpenAI API]</i> Added an option to enable the OpenAI storage for API requests [<a href="https://github.com/micz/ThunderAI/issues/406">#406</a>].</li>
