added a button to open the custom prompts tab and improved the descriptions

--- a/pages/customdataplaceholders/mzta-custom-dataplaceholders.html
+++ b/pages/customdataplaceholders/mzta-custom-dataplaceholders.html
@@ -9,9 +9,10 @@
 <body>
     <div>
         <h1 class="page_title">__MSG_customDataPH_manageDataPH__</h1>
-        <p>__MSG_customDataPH_manageDataPH_info_default__<br>
+        <p>__MSG_customDataPH_manageDataPH_info_default_2__<br>
             __MSG_customPrompts_managePrompts_info_default_3__
-        <br>__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_more_info_string__</a></p>
+    <br>__MSG_customDataPH_manageDataPH_info_default__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_more_info_string__</a>
+            <br><button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button></p>
     </div>
     <div id="import_export">
         <button id="btnExportAll">__MSG_customDataPH_ExportAll__</button><br>
