--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 3.5.5 - ??/??/2025</h2>
+      <ul>
+        <li><i>[All APIs]</i> Fix: Autotag and Antispam filter working again [<a href="https://github.com/micz/ThunderAI/issues/449">#449</a>].</li>
+      </ul>
       <h2>Version 3.5.4 - 13/06/2025</h2>
       <ul>
         <li><i>[ChatGPT Web]</i> Fix: Changed again how to detect when the response is completed.</li>
