--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.6.0 - ??/??/2025</h2>
+      <h2>Version 3.6.0 - 30/07/2025</h2>
       <ul>
         <li>Now it's possibile to define custom data placeholders to be used in custom prompts [<a href="https://github.com/micz/ThunderAI/issues/156">#156</a>].</li>
         <li>Improved the handling of HTML and line breaks between the email text and the AI Chat.</li>
@@ -24,7 +24,6 @@
         <li>Traditional Chinese (zh_Hant) translation added, thanks to <a href="https://github.com/evez">evez</a>.</li>
         <li>Russian (ru) translation added, thanks to <a href="https://hosted.weblate.org/user/law820314/">Maksim</a>.</li>
         <li>Some English typing errors have been fixed [<a href="https://github.com/micz/ThunderAI/issues/422">#422</a>].</li>
-        <li>...</li>
       </ul>
       <h2>Version 3.5.2 - 05/06/2025</h2>
       <ul>
