added info about br replaceing in chatgpt web interface. see #462

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -135,6 +135,16 @@
       <tr>
       <tr class="conntype_chatgpt_web">
         <td><label>
+          <span class="opt_title">__MSG_apiwebchat_info__</span>
+        </label></td>
+        <td>
+          <label>
+            __MSG_prefs_OptionText_chatgpt_web_br_replace_info__
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_chatgpt_web">
+        <td><label>
           <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_model__</span>
           <br><table title="__MSG_prefs_OptionText_chatgpt_web_model_tooltip__"><tr id="chatgpt_web_models_list"></tr></table>
         </label></td>
