--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -13,6 +13,7 @@
         <li><i>[ChatGPT Web]</i> Fix: Any &lt;br&gt; tag in the response is now replaced with a line break [<a href="https://github.com/micz/ThunderAI/issues/462">#462</a>].</li>
         <li><i>[ChatGPT Web]</i> Models list updated. [<a href="https://github.com/micz/ThunderAI/issues/464">#464</a>].</li>
         <li><i>[All APIs]</i> Fix: If the incoming email has no text only part, the html part is used [<a href="https://github.com/micz/ThunderAI/issues/470">#470</a>].</li>
+        <li><i>[All APIs]</i> Fix: Improved the extraction of the plain text from html emails [<a href="https://github.com/micz/ThunderAI/issues/469">#469</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 3.6.0 - 30/07/2025</h2>
