in the openai comp integration is now possibile to clear the models list. see #472

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -410,7 +410,8 @@
         <td>
           <label>
             <span class="opt_title">__MSG_OpenAIComp_Models__</span>
-            <br><button id="btnOpenAICompForceModel" class="btn_small">__MSG_prefs_OpenAIComp_ForceModel__</button></td>
+            <br><button id="btnOpenAICompForceModel" class="btn_small">__MSG_prefs_OpenAIComp_ForceModel__</button>
+          <br><button id="btnOpenAICompClearModelsList" class="btn_small">__MSG_prefs_OpenAIComp_ClearModelsList__</button></td>
           </label>
         </td>
         <td>
