connection_type dynamic loading

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -121,14 +121,7 @@
         </td>
         <td>
           <label>
-            <select id="connection_type" name="connection_type" class="option-input">
-              <option value="chatgpt_web">__MSG_prefs_Connection_type_ChatGPT_Web__</option>
-              <option value="chatgpt_api">__MSG_prefs_Connection_type_ChatGPT_API__</option>
-              <option value="google_gemini_api">__MSG_prefs_Connection_type_Google_Gemini_API__</option>
-              <option value="anthropic_api">__MSG_prefs_Connection_type_Anthropic_API__</option>
-              <option value="ollama_api">__MSG_prefs_Connection_type_Ollama_API__</option>
-              <option value="openai_comp_api">__MSG_prefs_Connection_type_OpenAI_Comp_API__</option>
-            </select>
+            <select id="connection_type" name="connection_type" class="option-input"></select>
           </label>
         </td>
       </tr>
