--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -13,6 +13,25 @@
     </div>
     <div class="addtags_table_title section_title">__MSG_AddTags_prompt_prefs_title__</div>
     <table id="miczPrefs">
+          <tr class="add_tags_tr specific_integration">
+            <td><span>__MSG_prefs_OptionText_add_tags_use_specific_integration__</span>
+            </td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_use_specific_integration" name="add_tags_use_specific_integration" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_use_specific_integration_Info__
+              </label>
+            </td>
+          </tr>
+          <tr class="add_tags_tr specific_integration specific_integration_sub">
+            <td><span>__MSG_prefs_Connection_type__</span>
+            </td>
+            <td>
+              <label>
+                <select id="add_tags_connection_type" name="add_tags_connection_type" class="option-input"></select>
+              </label>
+            </td>
+          </tr>
           <tr class="add_tags_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
             <td>
