--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="mzta-options.css">
+    <link rel="stylesheet" href="../pages/_lib/connection-ui.css">
   </head>
   <body>
     <div id="miczRelNotes"><a href="mzta-release-notes.html">__MSG_prefs_OptionText_release_notes__</a></div>
@@ -113,368 +114,7 @@
           </label>
         </td>
       </tr>
-      <tr>
-        <td>
-          <label>
-            <span class="opt_title">__MSG_prefs_Connection_type__</span>
-          </label>
-        </td>
-        <td>
-          <label>
-            <select id="connection_type" name="connection_type" class="option-input"></select>
-          </label>
-        </td>
-      </tr>
-      <tr>
-      <tr class="conntype_chatgpt_web">
-        <td><label>
-          <span class="opt_title">__MSG_apiwebchat_info__</span>
-        </label></td>
-        <td>
-          <label>
-            __MSG_prefs_OptionText_chatgpt_web_br_replace_info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_web">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_model__</span>
-          <br><table title="__MSG_prefs_OptionText_chatgpt_web_model_tooltip__"><tr id="chatgpt_web_models_list"></tr></table>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="chatgpt_web_model" name="chatgpt_web_model" class="option-input" />
-            <br>__MSG_prefs_OptionText_chatgpt_web_model_info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_web">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_project__</span>
-          <br><i class="small_info" id="chatgpt_web_project_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b class="lightbold">/g/PROJECT-ID-PROJECT-NAME/project</b>
-            <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="chatgpt_web_project" name="chatgpt_web_project" class="option-input" />
-            <br>__MSG_prefs_OptionText_chatgpt_web_project_info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_web">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_custom_gpt__</span>
-          <br><i class="small_info" id="chatgpt_web_custom_gpt_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b class="lightbold">/g/CUSTOM-GPT-ID</b>
-            <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="chatgpt_web_custom_gpt" name="chatgpt_web_custom_gpt" class="option-input" />
-            <br>__MSG_prefs_OptionText_chatgpt_web_custom_gpt_info__
-            <br>__MSG_prefs_OptionText_CustomGPT_Warn__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_web">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_tempchat__</span>
-        </label></td>
-        <td>
-          <label>
-            <input type="checkbox" id="chatgpt_web_tempchat" name="chatgpt_web_tempchat" class="option-input" />
-            &nbsp;<span>__MSG_prefs_OptionText_chatgpt_web_tempchat_info__
-              <br>__MSG_prefs_OptionText_Project_No_temporary_chat_warn__
-            </span>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_web">
-        <td colspan="2" style="padding:0px 2em;text-align:center;"><span>__MSG_OpenChatGPTTab_Info__</span>
-            <br><br><button id="btnChatGPTWeb_Tab">__MSG_OpenChatGPTTab__</button>
-            <br><br>__MSG_OpenChatGPTTab_Info2__
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_ChatGPT_API_Key__</span>
-        </label></td>
-        <td>
-          <div class="api_key-container">
-            <label>
-              <input type="password" id="chatgpt_api_key" name="chatgpt_api_key" class="option-input"/>
-            </label>
-            <span class="toggle-icon" id="toggle_chatgpt_api_key"><img src="../images/pwd-show.png" id="pwd-icon_chatgpt_api_key"></span>
-          </div>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_ChatGPT_Models__</span>
-          </label>
-        </td>
-        <td>
-          <button id="btnUpdateChatGPTModels">__MSG_ChatGPT_Models_Fetch__</button> <span id="chatgpt_model_fetch_loading">__MSG_Loading__</span><br>
-          <label>
-            <select id="chatgpt_model" name="chatgpt_model" class="option-input">
-            </select>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_ChatGPT_chatgpt_api_store__</span>
-          </label>
-        </td>
-        <td>
-          <label>
-            <input type="checkbox" id="chatgpt_api_store" name="chatgpt_api_store" class="option-input" />
-            &nbsp;<span>__MSG_ChatGPT_chatgpt_api_store_info__</span>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_chatgpt_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_ChatGPT_Developer_Messages__</span>
-          </label>
-        </td>
-        <td>
-          <label>
-            <textarea id="chatgpt_developer_messages" name="chatgpt_developer_messages" class="option-input option-textarea"></textarea>
-            <br>__MSG_ChatGPT_Developer_Messages_Info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_google_gemini_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_GoogleGemini_API_Key__</span>
-        </label></td>
-        <td>
-          <div class="api_key-container">
-            <label>
-              <input type="password" id="google_gemini_api_key" name="google_gemini_api_key" class="option-input"/>
-            </label>
-            <span class="toggle-icon" id="toggle_google_gemini_api_key"><img src="../images/pwd-show.png" id="pwd-icon_google_gemini_api_key"></span>
-          </div>
-        </td>
-      </tr>
-      <tr class="conntype_google_gemini_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_GoogleGemini_Models__</span>
-          </label>
-        </td>
-        <td>
-          <button id="btnUpdateGoogleGeminiModels">__MSG_GoogleGemini_Models_Fetch__</button> <span id="google_gemini_model_fetch_loading">__MSG_Loading__</span><br>
-          <label>
-            <select id="google_gemini_model" name="google_gemini_model" class="option-input">
-            </select>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_google_gemini_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_GoogleGemini_SystemInstruction__</span>
-          </label>
-        </td>
-        <td>
-          <label>
-            <textarea id="google_gemini_system_instruction" name="google_gemini_system_instruction" class="option-input option-textarea"></textarea>
-            <br>__MSG_GoogleGemini_SystemInstruction_Info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_ollama_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_API_Host__</span>
-          <br><i class="small_info">__MSG_prefs_API_Host_Info__ http://127.0.0.1:11434</i>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="ollama_host" name="ollama_host" class="option-input"/>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_ollama_api" id="ollama_api_cors_warning">
-        <td colspan="2" style="text-align:center;">
-          __MSG_remember_CORS__ [<a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">__MSG_more_info_string__</a>]
-          <br><br><b>__MSG_CORS_alternative_1__</b>
-          <br>__MSG_CORS_alternative_2__
-            <br><br><button id="btnGiveAllUrlsPermission_ollama_api">__MSG_CORS_give_allurls_perm__</button>
-        </td>
-      </tr>
-      <tr class="conntype_ollama_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_Ollama_Models__</span>
-          </label>
-        </td>
-        <td>
-          <button id="btnUpdateOllamaModels">__MSG_Ollama_Models_Fetch__</button> <span id="ollama_model_fetch_loading">__MSG_Loading__</span><br>
-          <label>
-            <select id="ollama_model" name="ollama_model" class="option-input">
-            </select>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_ollama_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_ollama_think__</span>
-        </label></td>
-        <td>
-          <label>
-            <input type="checkbox" id="ollama_think" name="ollama_think" class="option-input"/>
-            __MSG_prefs_ollama_think_Info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_ollama_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_ollama_num_ctx__ <i>[num_ctx]</i></span>
-        </label></td>
-        <td>
-          <label>
-            <input type="number" id="ollama_num_ctx" name="ollama_num_ctx" class="option-input"/>
-            <br>__MSG_prefs_ollama_num_ctx_Info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OpenAIComp_AvailableServices__</span>
-        </label></td>
-        <td>
-          <label>
-            <select id="openai_comp_services_shortcut">
-            </select>
-            <br>__MSG_prefs_OpenAIComp_AvailableServices_Info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_API_Host__</span>
-          <br><i class="small_info">__MSG_prefs_API_Host_Info__ http://localhost:1234</i>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" />
-            <br>__MSG_prefs_OptionText_openai_comp_info_remote__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api" id="openai_comp_api_cors_warning">
-        <td colspan="2" style="text-align:center;">
-          __MSG_maybe_CORS_openai_comp__ [<a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">__MSG_more_info_string__</a>]
-          <br><br><b>__MSG_CORS_alternative_1__</b>
-          <br>__MSG_CORS_alternative_2__
-            <br><br><button id="btnGiveAllUrlsPermission_openai_comp_api">__MSG_CORS_give_allurls_perm__</button>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OptionText_openai_comp_use_v1__</span>
-        </label></td>
-        <td>
-          <label>
-            <input type="checkbox" id="openai_comp_use_v1" name="openai_comp_use_v1" class="option-input" />
-            &nbsp;<span>__MSG_prefs_OptionText_openai_comp_use_v1_info__</span>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OpenAIComp_API_Key__</span>
-          <br><i class="small_info">__MSG_Optional__</i>
-        </label></td>
-        <td>
-          <div class="api_key-container">
-            <label>
-              <input type="password" id="openai_comp_api_key" name="openai_comp_api_key" class="option-input"/>
-            </label>
-            <span class="toggle-icon" id="toggle_openai_comp_api_key"><img src="../images/pwd-show.png" id="pwd-icon_openai_comp_api_key"></span>
-          </div>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_OpenAIComp_Models__</span>
-            <br><button id="btnOpenAICompForceModel" class="btn_small">__MSG_prefs_OpenAIComp_ForceModel__</button>
-          <br><button id="btnOpenAICompClearModelsList" class="btn_small">__MSG_prefs_OpenAIComp_ClearModelsList__</button></td>
-          </label>
-        </td>
-        <td>
-          <button id="btnUpdateOpenAICompModels">__MSG_OpenAIComp_Models_Fetch__</button> <span id="openai_comp_model_fetch_loading">__MSG_Loading__</span><br>
-          <label>
-            <select id="openai_comp_model" name="openai_comp_model" class="option-input">
-            </select>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_openai_comp_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_OpenAIComp_ChatName__</span>
-        </label></td>
-        <td>
-          <label>
-            <input type="text" id="openai_comp_chat_name" name="openai_comp_chat_name" class="option-input" />
-            <br>__MSG_prefs_OpenAIComp_ChatName_Info__
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_anthropic_api">
-        <td><label>
-          <span class="opt_title">__MSG_prefs_Anthropic_API_Key__</span>
-        </label></td>
-        <td>
-          <div class="api_key-container">
-            <label>
-              <input type="password" id="anthropic_api_key" name="anthropic_api_key" class="option-input"/>
-            </label>
-            <span class="toggle-icon" id="toggle_anthropic_api_key"><img src="../images/pwd-show.png" id="pwd-icon_anthropic_api_key"></span>
-          </div>
-        </td>
-      </tr>
-      <tr class="conntype_anthropic_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_Anthropic_Models__</span>
-          </label>
-        </td>
-        <td>
-          <button id="btnUpdateAnthropicModels">__MSG_Anthropic_Models_Fetch__</button> <span id="anthropic_model_fetch_loading">__MSG_Loading__</span><br>
-          <label>
-            <select id="anthropic_model" name="anthropic_model" class="option-input">
-            </select>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_anthropic_api">
-        <td>
-          <label>
-            <span class="opt_title">__MSG_Anthropic_Version__</span>
-          </label>
-        </td>
-        <td>
-          <label>
-            <input type="text" id="anthropic_version" name="anthropic_version" class="option-input" />
-            <br>__MSG_Anthropic_Version_Info__ <a href="https://docs.anthropic.com/en/api/versioning">https://docs.anthropic.com/en/api/versioning</a>
-          </label>
-        </td>
-      </tr>
-      <tr class="conntype_anthropic_api">
-        <td><span class="opt_title">__MSG_prefs_OptionText_anthropic_max_tokens__</span></td>
-        <td>
-          <label>
-            <input type="number" id="anthropic_max_tokens" name="anthropic_max_tokens" class="option-input" />
-            <br>__MSG_prefs_OptionText_anthropic_max_tokens_Info__
-          </label>
-        </td>
-      </tr>
+      <tr id="connection_ui_anchor"></tr>
       <tr id="max_prompt_length_tr">
         <td><span class="opt_title">__MSG_prefs_OptionText_max_prompt_length__</span></td>
         <td>
