saving connection type and model per prompt. see #438

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -25,6 +25,7 @@
             </td>
           </tr>
           <tr id="connection_ui_anchor"></tr>
+          <tr id="connection_ui_end"><td colspan="2"></td></tr>
           <tr class="add_tags_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
             <td>
