always showing with proper message the addtags and spamfilter rows. see #438

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -132,6 +132,7 @@
           <label>
             <input type="checkbox" id="add_tags" name="add_tags" class="option-input" />
             __MSG_prefs_OptionText_add_tags_Info__
+            <br><span class="warn_API_needed" id="add_tags_warn_API_needed">__MSG_warn_API_needed__</span>
           </label>
         </td>
       </tr>
@@ -142,6 +143,7 @@
           <label>
             <input type="checkbox" id="spamfilter" name="spamfilter" class="option-input" />
             __MSG_prefs_OptionText_spamfilter_Info__
+            <br><span class="warn_API_needed" id="spamfilter_warn_API_needed">__MSG_warn_API_needed__</span>
           </label>
         </td>
       </tr>
