--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ThunderAI - __MSG_SpamFilter_PageTitle__</title>
     <link rel="stylesheet" href="mzta-spamfilter.css">
+    <link rel="stylesheet" href="../_lib/connection-ui.css">
     <link rel="icon" href="../../images/icon-16px.png">
 </head>
 <body>
@@ -13,6 +14,18 @@
     </div>
     <div class="spamfilter_table_title section_title">__MSG_SpamFilter_prompt_prefs_title__</div>
     <table id="miczPrefs">
+          <tr class="spamfilter_tr specific_integration">
+            <td><span>__MSG_prefs_OptionText_use_specific_integration__</span>
+            </td>
+            <td>
+              <label>
+                <input type="checkbox" id="spamfilter_use_specific_integration" name="spamfilter_use_specific_integration" class="option-input" />
+                __MSG_prefs_OptionText_spamfilter_use_specific_integration_Info__
+              </label>
+            </td>
+          </tr>
+          <tr id="connection_ui_anchor"></tr>
+          <tr id="connection_ui_end"><td colspan="2"></td></tr>
           <tr class="spamfilter_tr">
             <td><span>__MSG_prefs_OptionText_spamfilter_threshold__</span></td>
             <td>
