--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -15,7 +15,7 @@
     <div class="addtags_table_title section_title">__MSG_AddTags_prompt_prefs_title__</div>
     <table id="miczPrefs">
           <tr class="add_tags_tr specific_integration">
-            <td><span>__MSG_prefs_OptionText_use_specific_integration__</span>
+            <td><span class="opt_title">__MSG_prefs_OptionText_use_specific_integration__</span>
             </td>
             <td>
               <label>
@@ -27,7 +27,7 @@
           <tr id="connection_ui_anchor"></tr>
           <tr id="connection_ui_end"><td colspan="2"></td></tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
             <td>
               <label>
                 <input type="number" id="add_tags_maxnum" name="add_tags_maxnum" class="option-input" />
@@ -36,7 +36,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_exclusions_exact_match__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_exclusions_exact_match__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_exclusions_exact_match" name="add_tags_exclusions_exact_match" class="option-input" />
@@ -45,7 +45,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_hide_exclusions__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_hide_exclusions__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_hide_exclusions" name="add_tags_hide_exclusions" class="option-input" />
@@ -54,7 +54,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_first_uppercase__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_first_uppercase__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_first_uppercase" name="add_tags_first_uppercase" class="option-input" />
@@ -63,7 +63,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_force_lang__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_force_lang__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_force_lang" name="add_tags_force_lang" class="option-input" />
@@ -72,7 +72,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr add_tags_auto">
-            <td><span>__MSG_prefs_OptionText_add_tags_auto__</span>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_auto__</span>
             <span class="infoline" id="add_tags_auto_infoline"><br>__MSG_prefs_OptionText_add_tags_auto_Info2__</span></td>
             <td>
               <label>
@@ -82,7 +82,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr add_tags_auto add_tags_auto_sub" id="add_tags_auto_only_inbox_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_auto_only_inbox__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_auto_only_inbox__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_auto_only_inbox" name="add_tags_auto_only_inbox" class="option-input" />
@@ -91,7 +91,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr add_tags_auto add_tags_auto_sub" id="add_tags_auto_uselist_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_auto_uselist__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_auto_uselist__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_auto_uselist" name="add_tags_auto_uselist" class="option-input" />
@@ -102,7 +102,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_context_menu__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_context_menu__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_context_menu" name="add_tags_context_menu" class="option-input" />
@@ -111,7 +111,7 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_auto_force_existing__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_add_tags_auto_force_existing__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_auto_force_existing" name="add_tags_auto_force_existing" class="option-input" />
