--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -15,7 +15,7 @@
     <div class="spamfilter_table_title section_title">__MSG_SpamFilter_prompt_prefs_title__</div>
     <table id="miczPrefs">
           <tr class="spamfilter_tr specific_integration">
-            <td><span>__MSG_prefs_OptionText_use_specific_integration__</span>
+            <td><span class="opt_title">__MSG_prefs_OptionText_use_specific_integration__</span>
             </td>
             <td>
               <label>
@@ -27,7 +27,7 @@
           <tr id="connection_ui_anchor"></tr>
           <tr id="connection_ui_end"><td colspan="2"></td></tr>
           <tr class="spamfilter_tr">
-            <td><span>__MSG_prefs_OptionText_spamfilter_threshold__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_spamfilter_threshold__</span></td>
             <td>
               <label>
                 <input type="number" id="spamfilter_threshold" name="spamfilter_threshold" min="0" max="100" class="option-input" /><span id="spamfilter_threshold_too_low">__MSG_spamfilter_threshold_too_low__</span>
@@ -36,7 +36,7 @@
             </td>
           </tr>
           <tr class="spamfilter_tr">
-            <td><span>__MSG_prefs_OptionText_spamfilter_context_menu__</span></td>
+            <td><span class="opt_title">__MSG_prefs_OptionText_spamfilter_context_menu__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="spamfilter_context_menu" name="spamfilter_context_menu" class="option-input" />
