two strings added to i18n

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -131,8 +131,8 @@
       <div id="account_selector_info"><span class="section_title">__MSG_AccountSelector_AutoTags__</span>
       <br><span class="infoline">__MSG_AccountSelector_AutoTags_infoline__</span></div>
       <div id="account_selector_checkboxes"></div>
-      <button type="button" id="accounts_select_all">Select All</button>
-    <button type="button" id="accounts_deselect_all">Deselect All</button>
+      <button type="button" id="accounts_select_all">__MSG_SelectAll__</button>
+    <button type="button" id="accounts_deselect_all">__MSG_DeselectAll__</button>
     </div>
     <script src="mzta-add-tags.js" type="module"></script>
     <script src="../../js/mzta-i18n.js"></script>
