--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 3.7.2 - ??/??/2025</h2>
       <ul>
+        <li><i>[ChatGPT Web]</i> Fix: Not showing the force complete hint if the prompt has not been sent.</li>
         <li>...</li>
       </ul>
       <h2>Version 3.7.1 - 26/09/2025</h2>
