Asking for the *.openai.com API optional permission. see #529

--- a/pages/onboarding/onboarding.html
+++ b/pages/onboarding/onboarding.html
@@ -17,6 +17,9 @@
       <div id="chatgpt_web_permission">__MSG_ask_chatgptweb_permission_1__
         <br>__MSG_ask_integration_permission_2__
       </div>
+      <div id="openai_api_permission">__MSG_ask_openai_api_permission_1__
+        <br>__MSG_ask_integration_permission_2__
+      </div>
       <div id="anthropic_api_permission">__MSG_ask_anthropic_api_permission_1__
         <br>__MSG_ask_integration_permission_2__
       </div>
