--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -14,6 +14,9 @@
 <div id="ask_anthropic_api_perm">__MSG_ask_anthropic_api_permission_1__
     <br>__MSG_ask_integration_permission_2_popup__
 </div>
+<div id="ask_openai_api_perm">__MSG_ask_openai_api_permission_1__
+    <br>__MSG_ask_integration_permission_2_popup__
+</div>
 <div id="mzta_search_banner">
     <div id="_spacer_div">&nbsp;</div>
     <div id="mzta_sending_prompt"><img src="mzta-loading.svg" title="__MSG_SendingPrompt__"></div>
