--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 3.7.6 - ??/??/2025</h2>
       <ul>
+        <li><i>[Claude API]</i> Added the System Prompt configuration option [<a href="https://github.com/micz/ThunderAI/issues/549">#549</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 3.7.5 - 22/10/2025</h2>
