--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,6 +11,7 @@
       <ul>
         <li><i>[Claude API]</i> Added the System Prompt configuration option [<a href="https://github.com/micz/ThunderAI/issues/549">#549</a>].</li>
         <li><i>[All APIs]</i> Trying to add missing parenthesis in the JSON response [<a href="https://github.com/micz/ThunderAI/issues/551">#551</a>].</li>
+        <li><i>[ChatGPT Web]</i> Fix: correctly showing the input field after an update in the HTML page from OpenAI [<a href="https://github.com/micz/ThunderAI/issues/556">#556</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 3.7.5 - 22/10/2025</h2>
