feat(summary): add auto-summary preference for message previews
- Add new preference option to enable automatic AI summarization
- Update all localization files with new preference text
- Implement preference check in message display script
- Add default preference setting in options configuration
- Include preference toggle in options UI

This adds a user-configurable option to automatically generate and display AI summaries when viewing email messages, with appropriate warnings about data transmission to AI services.

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -125,6 +125,17 @@
           </label>
         </td>
       </tr>
+      <tr>
+        <td style="width:20em"><label>
+          <span class="opt_title">__MSG_prefs_OptionText_auto_summary__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="auto_summary_enabled" name="auto_summary_enabled" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_auto_summary_Info__</span>
+          </label>
+        </td>
+      </tr>
       <tr class="add_tags_tr">
         <td><span class="opt_title">__MSG_prefs_OptionText_add_tags__</span>
         <br><button id="btnManageTagsInfo" class="btn_small">__MSG_prefs_OptionText_btnManageTagsInfo__</button></td>
