--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -102,6 +102,15 @@
                     <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
             </td>
         </tr>
+        <tr id="api_additional_info_toggle" class="small_info api_additional_info"> <!-- API settings additional info -->
+            <td colspan="5">
+                <span>__MSG_customPrompts_show_additional_info__ [API]</span>
+            </td>
+        </tr>
+        <tr id="api_additional_info" style="display: none;">
+            <td colspan="5" id="api_ui_container">
+                </td>
+        </tr>
     </table>
         <div class="go_right_float">* __MSG_customPrompts_form_required_fields__</div>
         <br>
