the api settings table container is now in the html page. see #102

--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -109,7 +109,11 @@
         </tr>
         <tr id="api_additional_info" style="display: none;"><!-- API settings additional info -->
             <td colspan="5" id="api_ui_container">
-                </td>
+                <table style="width: 100%; text-align: left;">
+                    <tr id="api_ui_anchor">
+                    </tr>
+                </table>
+            </td>
         </tr>
     </table>
         <div class="go_right_float">* __MSG_customPrompts_form_required_fields__</div>
