Fix malformed label closing tag in options page

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -175,7 +175,7 @@
           <label>
             <input type="checkbox" id="get_task" name="get_task" class="option-input" />
             __MSG_prefs_OptionText_get_task_Info__
-            </labeloptionoption>
+          </label>
         </td>
       </tr>
       <tr class="get_calendar_event_tr" id="no_sparks">
